# mystralnative

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: cd.yml  ci.yml  release.yml  sponza.yml
android/: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/scripts/: glb-parser.js  gltf-viewer.js  main.js
android/app/src/main/java/com/mystral/engine/: MystralActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
cmake/: ios.toolchain.cmake
docs/: CLI.md  V8_PREBUILTS.md  WEBGPU_BACKENDS.md  buildperf.md  headless-gpu.md  universal-webgpu-runtime.md
docs-site/: index.html  package.json  vite.config.ts
docs-site/docs/: getting-started.mdx
docs-site/public/: 404.html  install.sh
docs-site/src/: main.tsx  styles.css
docs-site/src/pages/: HomePage.tsx
docs/docs/: getting-started.mdx  installation.mdx
docs/docs/api/: cli.mdx
docs/docs/guides/: bundling.mdx  input-events.mdx  pixijs.mdx  threejs.mdx
docs/src/pages/: DocPage.tsx
examples/: compute-test.js  daynight.js  gamepad-3d.js  mystral-helmet.js  pixi-hello.js  pixi-mimic.js  pixi-simple.js  rotating-cube.js  rt-cornell-box.js  rt-pathtracer.js  rt-shadows.js  simple-boxes.js  simple-cube.js  simple-indexed.js  simple-mystral-bundle.js  simple-offscreen.js  simple-offscreen2.js  simple-pixi-like.js  simple-triangle.js  sponza.js  test-alpha-debug.js  test-audio.js  test-blend-simple.js  test-bundle.js  test-canvas2d.js  test-fetch.js  test-gamepad.js  test-http.js  test-texture.js  test-ui-3d.js  test-ui.js  threejs-docs-demo-src.js  threejs-docs-demo.js  triangle.js  webgpu-triangle.js
examples/embed-example/: main.cpp
examples/gltf-render/: main.ts  tsconfig.json
examples/gltf-test/: main.ts
examples/ios-gltf-viewer/: CMakeLists.txt  Info.plist  LaunchScreen.storyboard  README.md  main.mm  simulator-gltf-viewer.js
examples/multi-file/: bundle.js  main.ts  utils.ts
examples/mystral-test/: basic-scene.js  basic-scene.ts  bundle.js  forest2.js  forest2.ts  main.js  main.ts  sponza-full.js  sponza-full.ts  sponza.js  sponza.ts  tsconfig.json  ui-minimal.js  ui-minimal.ts  ui-no-radius.js  ui-no-radius.ts  ui-simple.js  ui-simple.ts  ui-test.js  ui-test.ts
examples/react-test/: debug.js  main.tsx  package.json  vite.config.ts
examples/simple-mystral/: index.ts  main.js  main.ts
examples/simple-mystral/core/: Camera.ts  Engine.ts  Geometry.ts  Mesh.ts  Node.ts  Scene.ts  Texture.ts
examples/simple-mystral/geometries/: BoxGeometry.ts
examples/simple-mystral/math/: Matrix4.ts  Quaternion.ts  Transform.ts  Vector3.ts
examples/test-bundle/: test.ts
examples/textured-cube/: main.js  main.ts
examples/ts-module-test/: main.ts  math.ts  package.json
include/mystral/: runtime.h  webgpu_compat.h
include/mystral/async/: event_loop.h
include/mystral/audio/: audio_bindings.h  audio_context.h
include/mystral/canvas/: canvas2d.h
include/mystral/debug/: debug_server.h
include/mystral/fs/: async_file.h  file_watcher.h
include/mystral/gltf/: gltf_loader.h
include/mystral/http/: async_http_client.h  http_client.h
include/mystral/js/: engine.h  module_resolver.h  module_system.h  ts_transpiler.h
include/mystral/platform/: input.h  window.h
include/mystral/vfs/: embedded_bundle.h
include/mystral/webgpu/: context.h
scripts/: bundle-examples.ts  bundle.mjs  download-deps.mjs  get-chrome-limits.mjs  package-app.sh  prebundle.ts
src/: runtime.cpp
src/async/: event_loop.cpp
src/audio/: audio_bindings.cpp  audio_context.cpp
src/canvas/: canvas.cpp  canvas2d.cpp  canvas2d_bindings.cpp
src/cli/: main.cpp
src/debug/: debug_server.cpp
src/fs/: async_file.cpp  file_watcher.cpp
src/gltf/: gltf_loader.cpp
src/http/: async_http_client.cpp  http_client.cpp
src/input/: input_shim.cpp
src/js/: engine_factory.cpp  jsc_engine.mm  module_resolver.cpp  module_system.cpp  quickjs_engine.cpp  ts_transpiler.cpp  v8_engine.cpp
src/platform/: android_main.cpp  input.cpp  surface_android.cpp  surface_linux.cpp  surface_metal.mm  surface_win32.cpp  window.cpp
src/utils/: cgltf_impl.cpp  stb_impl.cpp
src/vfs/: embedded_bundle.cpp
src/video/: async_capture.cpp  gpu_readback_recorder.cpp  windows_graphics_capture.cpp  windows_graphics_capture_impl.cpp
src/webgpu/: bindings.cpp  context.cpp
tasks/: ROADMAP.md
tasks/mystralnative/: roadmaptov1.md
tests/ci/: cli-basic.test.ts
tests/gpu/: fetch.test.ts  mystral-engine.test.ts  screenshot.test.ts  triangle.test.ts
